--- a/Day 01 - Gui Programming/tkinter.ipynb
+++ b/Day 01 - Gui Programming/tkinter.ipynb
@@ -137,6 +137,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter\n",
+    "root = tkinter.Tk()\n",
+    "root.title(\"Calculator\")\n",
+    "root.geometry(\"400x600\")\n",
+    "scvl = tkinter.StringVar()\n",
+    "scvl.set(\"\")\n",
+    "screen = tkinter.Entry(root, textvar=scvl, font=(\"Arial\", 30))\n",
+    "screen.pack(fill=\"both\", expand=True)\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "def click(event):\n",
+    "    text = event.widget['text']\n",
+    "    if text == \"=\":\n",
+    "        try:\n",
+    "            result = str(eval(screen.get()))\n",
+    "            screen.set(result)\n",
+    "        except Exception as e:\n",
+    "            screen.set(\"Error\")\n",
+    "    elif text == \"C\":\n",
+    "        screen.set(\"\")\n",
+    "    else:\n",
+    "        screen.set(screen.get() + text)\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Calculator\")\n",
+    "\n",
+    "screen = tk.StringVar()\n",
+    "entry = tk.Entry(root, textvar=screen, font=\"Arial 20\", bd=10, relief=tk.SUNKEN, justify=tk.RIGHT)\n",
+    "entry.grid(row=0, column=0, columnspan=4)\n",
+    "\n",
+    "button_texts = [\n",
+    "    \"7\", \"8\", \"9\", \"+\",\n",
+    "    \"4\", \"5\", \"6\", \"-\",\n",
+    "    \"1\", \"2\", \"3\", \"*\",\n",
+    "    \"C\", \"0\", \"=\", \"/\"\n",
+    "]\n",
+    "\n",
+    "row = 1\n",
+    "col = 0\n",
+    "for text in button_texts:\n",
+    "    btn = tk.Button(root, text=text, font=\"Arial 20\", relief=tk.RAISED, bd=5)\n",
+    "    btn.grid(row=row, column=col, sticky=\"nsew\", padx=5, pady=5)\n",
+    "    btn.bind(\"<Button-1>\", click)\n",
+    "    col += 1\n",
+    "    if col == 4:\n",
+    "        col = 0\n",
+    "        row += 1\n",
+    "\n",
+    "root.mainloop()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
